[gd_scene load_steps=29 format=3 uid="uid://b8t703ammwdme"]

[ext_resource type="Script" uid="uid://s78nnflf40c6" path="res://scripts/pause_menu.gd" id="1_5d2l8"]
[ext_resource type="Texture2D" uid="uid://dqm74bkiryaq0" path="res://assets/pause/pause.tres" id="2_v4r4p"]
[ext_resource type="Texture2D" uid="uid://d2tocnx8tfsxh" path="res://assets/pause/Pause menu new.png" id="3_1s2dm"]
[ext_resource type="Script" uid="uid://c70okqig5vgif" path="res://scripts/settings_menu.gd" id="3_v4r4p"]
[ext_resource type="Texture2D" uid="uid://c4b4jpw3eejnb" path="res://assets/main menu/Settings music - sfx volume revisi (1).png" id="5_1s2dm"]
[ext_resource type="AudioStream" uid="uid://ckraut501hxsx" path="res://assets/audio/Button Press SFX.mp3" id="6_v4r4p"]
[ext_resource type="Texture2D" uid="uid://11ragk0dhu3k" path="res://assets/retry/Are_u_sure retry.png" id="7_88e76"]
[ext_resource type="Texture2D" path="res://assets/main menu/Yes.tres" id="7_knqa7"]
[ext_resource type="Texture2D" path="res://assets/main menu/No.tres" id="8_71k7c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v4r4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1s2dm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88e76"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knqa7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71k7c"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1s2dm"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_88e76"]
color = Color(0, 0.45882353, 0.7254902, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_knqa7"]
color = Color(0, 0.45882353, 0.7254902, 1)
thickness = 6

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_knqa7"]
texture = ExtResource("7_88e76")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmnsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ofnjo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ofnjo"]
texture = ExtResource("7_knqa7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4hnlu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3o3g3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5b1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_avs0h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1rgno"]
texture = ExtResource("8_71k7c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkjer"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5gujb"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_5d2l8")

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 20.0
offset_top = 26.0
offset_right = 56.0
offset_bottom = 64.0
texture_normal = ExtResource("2_v4r4p")

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1166.0
offset_bottom = 626.0

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
layout_mode = 0
offset_left = 11.0
offset_top = -9.0
offset_right = 1168.0
offset_bottom = 642.0
texture = ExtResource("3_1s2dm")

[node name="ResumeButton" type="Button" parent="PauseMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 442.0
offset_top = 192.0
offset_right = 761.0
offset_bottom = 270.0

[node name="SettingsButton" type="Button" parent="PauseMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 463.0
offset_top = 278.0
offset_right = 738.0
offset_bottom = 361.0

[node name="MainMenuButton" type="Button" parent="PauseMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 444.0
offset_top = 385.0
offset_right = 745.0
offset_bottom = 452.0

[node name="QuitButton" type="Button" parent="PauseMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 457.0
offset_top = 478.0
offset_right = 738.0
offset_bottom = 529.0

[node name="Retry" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 497.0
offset_top = 552.0
offset_right = 709.0
offset_bottom = 621.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_v4r4p")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1s2dm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_88e76")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_knqa7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_71k7c")

[node name="SettingsMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_v4r4p")

[node name="TextureRect" type="TextureRect" parent="SettingsMenu"]
layout_mode = 0
offset_left = -5.0
offset_top = -2.0
offset_right = 1175.0
offset_bottom = 647.0
texture = ExtResource("5_1s2dm")

[node name="MusicVolume" type="Label" parent="SettingsMenu"]
layout_mode = 0
offset_left = -5.0
offset_top = -2.0
offset_right = 35.0
offset_bottom = 21.0

[node name="BackButton" type="Button" parent="SettingsMenu"]
visibility_layer = 0
layout_mode = 0
offset_left = 882.0
offset_top = 48.0
offset_right = 986.0
offset_bottom = 133.0

[node name="MusicSlider" type="HSlider" parent="SettingsMenu"]
layout_mode = 0
offset_left = 293.0
offset_top = 275.0
offset_right = 864.0
offset_bottom = 324.0
theme_override_styles/slider = SubResource("StyleBoxLine_1s2dm")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_88e76")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_knqa7")
max_value = 1.0
step = 0.05
value = 0.5

[node name="SFXSlider" type="HSlider" parent="SettingsMenu"]
layout_mode = 0
offset_left = 298.0
offset_top = 448.0
offset_right = 864.0
offset_bottom = 513.0
theme_override_styles/slider = SubResource("StyleBoxLine_1s2dm")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_88e76")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_knqa7")
max_value = 1.0
step = 0.05
value = 0.5

[node name="ConfirmationRetry" type="Panel" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 13.0
offset_right = 31.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_knqa7")

[node name="Yes" type="Button" parent="ConfirmationRetry"]
process_mode = 3
layout_mode = 0
offset_left = 370.0
offset_top = 346.0
offset_right = 519.0
offset_bottom = 418.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cmnsq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ofnjo")
theme_override_styles/hover = SubResource("StyleBoxTexture_ofnjo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4hnlu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3o3g3")

[node name="No" type="Button" parent="ConfirmationRetry"]
process_mode = 3
layout_mode = 0
offset_left = 570.0
offset_top = 344.0
offset_right = 707.0
offset_bottom = 410.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_h5b1d")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_avs0h")
theme_override_styles/hover = SubResource("StyleBoxTexture_1rgno")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jkjer")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5gujb")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("6_v4r4p")
volume_db = -2.0
bus = &"SFX"

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="SettingsMenu/BackButton" to="SettingsMenu" method="_on_back_button_pressed"]
[connection signal="value_changed" from="SettingsMenu/MusicSlider" to="SettingsMenu" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/SFXSlider" to="SettingsMenu" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="ConfirmationRetry/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="ConfirmationRetry/No" to="." method="_on_no_pressed"]
